Small refactor to the API
